--- a/Compote/index.html
+++ b/Compote/index.html
@@ -74,7 +74,7 @@
       <!-- Fichiers Javascript -->
       <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
       <script type="text/javascript">
-        // On initialise la latitude et la longitude de Paris (centre de la carte)
+        // On initialise la latitude et la longitude (centre de la carte)
         var composteurs = {
           "Place Sainte Eulalie": {
             "lat": 44.833245,
